[package]
name = "renesas-5p49v-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0" }
embassy-time = "0.5.0"
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
cortex-m-rt = "0.7.0"
embedded-hal-async = "1.0.0"
